--- a/src/TwentyFortyEight.Maui/SettingsPage.xaml
+++ b/src/TwentyFortyEight.Maui/SettingsPage.xaml
@@ -14,101 +14,73 @@
       <VerticalStackLayout Spacing="28">
 
          <!-- Animations Section -->
-         <VerticalStackLayout Spacing="8">
-            <Label x:Name="AnimationsSectionLabel"
-               Text="{x:Static strings:AppStrings.AnimationsSection}"
-               FontSize="13"
-               TextColor="{AppThemeBinding Light={StaticResource NativeTextTertiaryLight}, Dark={StaticResource NativeTextTertiaryDark}}"
-               Margin="16,0,0,0" />
-            
-            <Border x:Name="AnimationsSectionBorder"
-               Background="{AppThemeBinding Light={StaticResource NativeSettingsCellBackgroundLight}, Dark={StaticResource NativeSettingsCellBackgroundDark}}"
-               Stroke="Transparent">
-               <Border.StrokeShape>
-                  <RoundRectangle CornerRadius="{StaticResource NativeCardCornerRadius}" />
-               </Border.StrokeShape>
-               <VerticalStackLayout Spacing="0">
+         <components:NativeListSection Header="{x:Static strings:AppStrings.AnimationsSection}">
+            <components:NativeListSection.Items>
+               <!-- Enable Animations Toggle -->
+               <components:SettingToggleRow x:Name="AnimationsToggleRow"
+                  Label="{x:Static strings:AppStrings.EnableAnimations}"
+                  IsToggled="{Binding AnimationsEnabled}"
+                  AutomationId="AnimationsEnabledSwitch"
+                  SemanticHint="{x:Static strings:AppStrings.EnableAnimationsHint}" />
+               
+               <!-- Separator -->
+               <components:NativeListSeparator IsVisible="{Binding AnimationsEnabled}" Margin="16,0" />
 
-                  <!-- Enable Animations Toggle -->
-                  <components:SettingToggleRow x:Name="AnimationsToggleRow"
-                     Label="{x:Static strings:AppStrings.EnableAnimations}"
-                     IsToggled="{Binding AnimationsEnabled}"
-                     AutomationId="AnimationsEnabledSwitch"
-                     SemanticHint="{x:Static strings:AppStrings.EnableAnimationsHint}" />
+               <!-- Animation Speed Slider -->
+               <VerticalStackLayout Spacing="8" IsVisible="{Binding AnimationsEnabled}" Padding="16,12">
+                  <Label
+                     Text="{x:Static strings:AppStrings.AnimationSpeed}"
+                     FontSize="17"
+                     TextColor="{AppThemeBinding Light={StaticResource NativeTextPrimaryLight}, Dark={StaticResource NativeTextPrimaryDark}}" />
                   
-                  <!-- Separator -->
-                  <BoxView HeightRequest="0.5"
-                           Color="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}"
-                           IsVisible="{Binding AnimationsEnabled}"
-                           Margin="16,0" />
-
-                  <!-- Animation Speed Slider -->
-                  <VerticalStackLayout Spacing="8" IsVisible="{Binding AnimationsEnabled}" Padding="16,12">
+                  <Grid ColumnDefinitions="Auto,*,Auto" ColumnSpacing="12" Margin="0,4,0,0">
                      <Label
-                        Text="{x:Static strings:AppStrings.AnimationSpeed}"
-                        FontSize="17"
-                        TextColor="{AppThemeBinding Light={StaticResource NativeTextPrimaryLight}, Dark={StaticResource NativeTextPrimaryDark}}" />
-                     
-                     <Grid ColumnDefinitions="Auto,*,Auto" ColumnSpacing="12" Margin="0,4,0,0">
-                        <Label
-                           Grid.Column="0"
-                           Text="{x:Static strings:AppStrings.AnimationSpeedSlow}"
-                           FontSize="13"
-                           TextColor="{AppThemeBinding Light={StaticResource NativeTextSecondaryLight}, Dark={StaticResource NativeTextSecondaryDark}}"
-                           VerticalOptions="Center" />
-                        <Slider
-                           AutomationId="AnimationSpeedSlider"
-                           Grid.Column="1"
-                           Value="{Binding AnimationSpeed}"
-                           Minimum="0.5"
-                           Maximum="1.5"
-                           MinimumTrackColor="{AppThemeBinding Light={StaticResource NativeAccentLight}, Dark={StaticResource NativeAccentDark}}"
-                           MaximumTrackColor="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}"
-                           ThumbColor="{AppThemeBinding Light={StaticResource NativeAccentLight}, Dark={StaticResource NativeAccentDark}}"
-                           VerticalOptions="Center"
-                           SemanticProperties.Description="{x:Static strings:AppStrings.AnimationSpeed}"
-                           SemanticProperties.Hint="{x:Static strings:AppStrings.AnimationSpeedHint}" />
-                        <Label
-                           Grid.Column="2"
-                           Text="{x:Static strings:AppStrings.AnimationSpeedFast}"
-                           FontSize="13"
-                           TextColor="{AppThemeBinding Light={StaticResource NativeTextSecondaryLight}, Dark={StaticResource NativeTextSecondaryDark}}"
-                           VerticalOptions="Center" />
-                     </Grid>
-
+                        Grid.Column="0"
+                        Text="{x:Static strings:AppStrings.AnimationSpeedSlow}"
+                        FontSize="13"
+                        TextColor="{AppThemeBinding Light={StaticResource NativeTextSecondaryLight}, Dark={StaticResource NativeTextSecondaryDark}}"
+                        VerticalOptions="Center" />
+                     <Slider
+                        AutomationId="AnimationSpeedSlider"
+                        Grid.Column="1"
+                        Value="{Binding AnimationSpeed}"
+                        Minimum="0.5"
+                        Maximum="1.5"
+                        MinimumTrackColor="{AppThemeBinding Light={StaticResource NativeAccentLight}, Dark={StaticResource NativeAccentDark}}"
+                        MaximumTrackColor="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}"
+                        ThumbColor="{AppThemeBinding Light={StaticResource NativeAccentLight}, Dark={StaticResource NativeAccentDark}}"
+                        VerticalOptions="Center"
+                        SemanticProperties.Description="{x:Static strings:AppStrings.AnimationSpeed}"
+                        SemanticProperties.Hint="{x:Static strings:AppStrings.AnimationSpeedHint}" />
                      <Label
-                        Text="{Binding AnimationSpeed, StringFormat='{0:F1}x'}"
-                        FontSize="15"
-                        FontAttributes="Bold"
-                        TextColor="{AppThemeBinding Light={StaticResource NativeTextPrimaryLight}, Dark={StaticResource NativeTextPrimaryDark}}"
-                        HorizontalOptions="Center"
-                        Margin="0,4,0,0" />
-                  </VerticalStackLayout>
+                        Grid.Column="2"
+                        Text="{x:Static strings:AppStrings.AnimationSpeedFast}"
+                        FontSize="13"
+                        TextColor="{AppThemeBinding Light={StaticResource NativeTextSecondaryLight}, Dark={StaticResource NativeTextSecondaryDark}}"
+                        VerticalOptions="Center" />
+                  </Grid>
+
+                  <Label
+                     Text="{Binding AnimationSpeed, StringFormat='{0:F1}x'}"
+                     FontSize="15"
+                     FontAttributes="Bold"
+                     TextColor="{AppThemeBinding Light={StaticResource NativeTextPrimaryLight}, Dark={StaticResource NativeTextPrimaryDark}}"
+                     HorizontalOptions="Center"
+                     Margin="0,4,0,0" />
                </VerticalStackLayout>
-            </Border>
-         </VerticalStackLayout>
+            </components:NativeListSection.Items>
+         </components:NativeListSection>
 
          <!-- Haptics Section (conditionally visible) -->
-         <VerticalStackLayout Spacing="8" IsVisible="{Binding IsHapticsSupported}">
-            <Label x:Name="HapticsSectionLabel"
-               Text="{x:Static strings:AppStrings.HapticsSection}"
-               FontSize="13"
-               TextColor="{AppThemeBinding Light={StaticResource NativeTextTertiaryLight}, Dark={StaticResource NativeTextTertiaryDark}}"
-               Margin="16,0,0,0" />
-            
-            <Border x:Name="HapticsSectionBorder"
-               Background="{AppThemeBinding Light={StaticResource NativeSettingsCellBackgroundLight}, Dark={StaticResource NativeSettingsCellBackgroundDark}}"
-               Stroke="Transparent">
-               <Border.StrokeShape>
-                  <RoundRectangle CornerRadius="{StaticResource NativeCardCornerRadius}" />
-               </Border.StrokeShape>
+         <components:NativeListSection Header="{x:Static strings:AppStrings.HapticsSection}" IsVisible="{Binding IsHapticsSupported}">
+            <components:NativeListSection.Items>
                <components:SettingToggleRow x:Name="HapticsToggleRow"
                   Label="{x:Static strings:AppStrings.EnableHaptics}"
                   IsToggled="{Binding HapticsEnabled}"
                   AutomationId="HapticsEnabledSwitch"
                   SemanticHint="{x:Static strings:AppStrings.EnableHapticsHint}" />
-            </Border>
-         </VerticalStackLayout>
+            </components:NativeListSection.Items>
+         </components:NativeListSection>
 
       </VerticalStackLayout>
    </ScrollView>
