add native bottom bar handling

--- a/src/TwentyFortyEight.Maui/App.xaml
+++ b/src/TwentyFortyEight.Maui/App.xaml
@@ -14,6 +14,7 @@
             
             <!-- Converters -->
             <converters:StringNotEmptyConverter x:Key="StringNotEmptyConverter" />
+            <converters:BoolToOpacityConverter x:Key="BoolToOpacityConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
