--- a/src/TwentyFortyEight.Maui/MainPage.xaml
+++ b/src/TwentyFortyEight.Maui/MainPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TwentyFortyEight.ViewModels;assembly=TwentyFortyEight.ViewModels"
              xmlns:components="clr-namespace:TwentyFortyEight.Maui.Components"
+             xmlns:controls="clr-namespace:TwentyFortyEight.Maui.Controls"
              xmlns:behaviors="clr-namespace:TwentyFortyEight.Maui.Behaviors"
              xmlns:converters="clr-namespace:TwentyFortyEight.Maui.Converters"
              xmlns:core="clr-namespace:TwentyFortyEight.Core;assembly=TwentyFortyEight.Core"
@@ -14,6 +15,7 @@
 
     <ContentPage.Resources>
         <converters:FontSizeScaleConverter x:Key="FontSizeScaleConverter" />
+        <converters:BoolToOpacityConverter x:Key="BoolToOpacityConverter" />
     </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
@@ -169,40 +171,28 @@
         </Border>
 
         <!-- Controls -->
-        <FlexLayout x:Name="ControlsFlexLayout"
-                    Grid.Row="3"
-                    Direction="Row"
-                    Wrap="Wrap"
-                    JustifyContent="Center"
-                    AlignItems="Start"
-                    AlignContent="Start"
-                    Margin="0,5,0,0">
+        <controls:BottomBar x:Name="ControlsBottomBar"
+                              Grid.Row="3"
+                              BackgroundColor="Transparent"
+                              BarHeight="80"
+                              Elevation="10"
+                              IosMaterial="SystemChromeMaterial"
+                              UseWindowsMica="True"
+                              Padding="16,12">
+            <Grid ColumnDefinitions="*,*" ColumnSpacing="16">
+                <components:IconButton Grid.Column="0"
+                                       Icon="↻"
+                                       ButtonText="{x:Static strings:AppStrings.NewGame}"
+                                       Command="{Binding NewGameCommand}"
+                                       IsButtonEnabled="True" />
 
-            <Button x:Name="NewGameButton"
-                AutomationId="NewGameButton"
-                Command="{Binding NewGameCommand}"
-                Text="{x:Static strings:AppStrings.NewGame}"
-                Background="{AppThemeBinding Light={StaticResource NativeButtonBackgroundLight}, Dark={StaticResource NativeButtonBackgroundDark}}"
-                TextColor="{AppThemeBinding Light={StaticResource NativeButtonTextLight}, Dark={StaticResource NativeButtonTextDark}}"
-                HeightRequest="50"
-                Padding="15,0"
-                Margin="3,2.5"
-                CornerRadius="5"
-                SemanticProperties.Description="{x:Static strings:AppStrings.NewGameDescription}" />
-
-            <Button x:Name="UndoButton"
-                AutomationId="UndoButton"
-                Command="{Binding UndoCommand}"
-                IsEnabled="{Binding CanUndo}"
-                Text="{x:Static strings:AppStrings.Undo}"
-                Background="{AppThemeBinding Light={StaticResource NativeButtonBackgroundLight}, Dark={StaticResource NativeButtonBackgroundDark}}"
-                TextColor="{AppThemeBinding Light={StaticResource NativeButtonTextLight}, Dark={StaticResource NativeButtonTextDark}}"
-                HeightRequest="50"
-                Padding="15,0"
-                Margin="3,2.5"
-                CornerRadius="5"
-                SemanticProperties.Description="{x:Static strings:AppStrings.UndoDescription}" />
-        </FlexLayout>
+                <components:IconButton Grid.Column="1"
+                                       Icon="⎌"
+                                       ButtonText="{x:Static strings:AppStrings.Undo}"
+                                       Command="{Binding UndoCommand}"
+                                       IsButtonEnabled="{Binding CanUndo}" />
+            </Grid>
+        </controls:BottomBar>
 
         <!-- Game Over Modal -->
         <components:GameOverModal x:Name="GameOverModal"
